# sucks2

./: Cargo.toml  README.md
src/: lib.rs
src/assembly/: mod.rs
src/assembly/x86/: expressions.rs  instructions.rs  memory.rs  mod.rs  operands.rs  registers.rs  symbols.rs
src/assembly/x86/instructions/: jumps.rs  mod.rs  simpleMath.rs  zeroOperands.rs
src/crypto/: mod.rs
src/formats/: mbr.rs  mod.rs  uf4.rs
src/formats/tinaFS/: mod.rs  user.rs
tests/: 8086.rs  alpha.rs
