[package]
name                                    =   "sucks2"
version                                 =   "0.1.0"
authors                                 =   [
                                              "sivizius <sivizius@ohai.su>"
                                            ]
edition                                 =   "2018"

[dependencies]
rand                                    =   { version = "0.6",                  optional = false  }
bitflags                                =   { version = "1.0",                  optional = false  }
